chore(deps): replace ajv-cli with @sourcemeta/jsonschema
Replace unmaintained ajv-cli (security vulnerabilities in dependencies)
with @sourcemeta/jsonschema, an actively maintained JSON Schema validator
with prebuilt native binaries.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
-    "ajv-cli": "^5.0.0",
+    "@sourcemeta/jsonschema": "^12.10.1",
     "commitlint-plugin-selective-scope": "^1.0.1"
   }
 }
